[package]
name = "glusterlog"
version = "0.1.0"
authors = ["Csaba Henk <csaba@lowlife.hu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
